finish implementing password set/reset

--- a/app/sprinkles/account/templates/mail/password-reset.html.twig
+++ b/app/sprinkles/account/templates/mail/password-reset.html.twig
@@ -9,11 +9,11 @@
 A lost password request has been submitted for your account with {{site.title}} ({{site.uri.public}}) on {{request_date | date('m/d/Y g:i A')}}.
 </p>
 <p>
-If you or someone you trust sent this request, and you wish to set a new password, please click this link: <a href="{{site.uri.public}}/account/reset-password?secret_token={{user.secret_token}}&confirm=true">{{site.uri.public}}/account/reset-password?secret_token={{user.secret_token}}&confirm=true</a>
+If you or someone you trust sent this request, and you wish to set a new password, please click this link: <a href="{{site.uri.public}}/account/reset-password/confirm?secret_token={{user.secret_token}}">{{site.uri.public}}/account/reset-password/confirm?secret_token={{user.secret_token}}</a>
 </p>
 
 <p>
-If you did <b>not</b> expect this email, you may click this link to cancel the request: <a href="{{site.uri.public}}/account/reset-password?secret_token={{user.secret_token}}&confirm=false">{{site.uri.public}}/account/reset-password?secret_token={{user.secret_token}}&confirm=false</a>, or simply do nothing and the request will expire on its own.
+If you did <b>not</b> expect this email, you may click this link to cancel the request: <a href="{{site.uri.public}}/account/reset-password/deny?secret_token={{user.secret_token}}">{{site.uri.public}}/account/reset-password/deny?secret_token={{user.secret_token}}</a>, or simply do nothing and the request will expire on its own.
 </p>
 <p>
 With regards,<br>
