--- a/app/sprinkles/account/templates/pages/reset-password.html.twig
+++ b/app/sprinkles/account/templates/pages/reset-password.html.twig
@@ -19,8 +19,11 @@
     
     <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
-            {% include "components/alerts.html.twig" %}
+            <div id="alerts-page">
+
+            </div>
             <form id="set-or-reset-password" role="form" action="{{site.uri.public}}/account/reset-password" method="post" class="r-form">
+                {% include "components/csrf.html.twig" %}
                 {# Prevent browsers from trying to autofill the password field.  See http://stackoverflow.com/a/23234498/2970321 #}
                 <input type="text" style="display:none">
                 <input type="password" style="display:none">
@@ -31,10 +34,10 @@
                 </div>                
                 
                 <div class="form-group">
-                    <label class="sr-only" for="form-passwordc">Re-enter new nassword</label>
+                    <label class="sr-only" for="form-passwordc">Re-enter new password</label>
                     <input type="password" name="passwordc" placeholder="Re-enter your new password" class="form-control" id="form-passwordc">
                 </div>
-                <input type="hidden" name="secret_token" value="{{secret_token}}">
+                <input type="hidden" name="secret_token" value="{{page.secret_token}}">
                 <button type="submit" class="btn">Set New Password and Sign In</button>
             </form>
         </div>
