--- a/app/sprinkles/account/templates/pages/set-password.html.twig
+++ b/app/sprinkles/account/templates/pages/set-password.html.twig
@@ -19,8 +19,11 @@
     
     <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
-            {% include "components/alerts.html.twig" %}
+            <div id="alerts-page">
+
+            </div>
             <form id="set-or-reset-password" role="form" action="{{site.uri.public}}/account/set-password" method="post" class="r-form">
+                {% include "components/csrf.html.twig" %}
                 {# Prevent browsers from trying to autofill the password field.  See http://stackoverflow.com/a/23234498/2970321 #}
                 <input type="text" style="display:none">
                 <input type="password" style="display:none">
@@ -33,7 +36,7 @@
                     <label class="sr-only" for="form-passwordc">Re-enter Password</label>
                     <input type="password" name="passwordc" placeholder="Re-enter your password" class="form-control" id="form-passwordc">
                 </div>
-                <input type="hidden" name="secret_token" value="{{secret_token}}">
+                <input type="hidden" name="secret_token" value="{{page.secret_token}}">
                 <button type="submit" class="btn">Set Password and Sign In</button>
             </form>
         </div>
