--- a/app/sprinkles/account/templates/pages/resend-verification.html.twig
+++ b/app/sprinkles/account/templates/pages/resend-verification.html.twig
@@ -11,7 +11,7 @@
             <h1>{{translate("ACCOUNT.VERIFICATION.RESEND")}}</h1>
             <div class="description">
                 <p>
-                    Please enter your username and the email address you used to sign up, and your verification email will be resent.
+                    Please enter the email address you used to sign up, and your verification email will be resent.
                 </p>
             </div>
         </div>
@@ -25,14 +25,10 @@
             <form id="request-verification-email" role="form" action="{{site.uri.public}}/account/resend-verification" method="post" class="r-form">
                 {% include "components/csrf.html.twig" %}
                 <div class="form-group">
-                    <label class="sr-only" for="verification-form-username">User name</label>
-                    <input type="text" name="user_name" placeholder="User name" class="form-control" id="verification-form-username">
-                </div>
-                <div class="form-group">
-                    <label class="sr-only" for="verification-form-email">Email</label>
+                    <label class="sr-only" for="verification-form-email">{{translate("EMAIL")}}</label>
                     <input type="text" name="email" placeholder="The email address you used to register" class="form-control" id="verification-form-email">
                 </div>                   
-                <button type="submit" class="btn">Email Account Verification Link</button>
+                <button type="submit" class="btn">Email the verification link for my account</button>
             </form>
         </div>
     </div>
