re-kerjigger lots of config keys

--- a/app/sprinkles/account/templates/layouts/azmind.html.twig
+++ b/app/sprinkles/account/templates/layouts/azmind.html.twig
@@ -55,8 +55,8 @@
                     "background" : "{{ assets.url('assets://vendor/azmind/images/login-background.jpg') | raw }}"
                 }
             },
-            "setting" : {
-                "can_register" : "{{site.setting.can_register}}"
+            "registration" : {
+                "enabled" : "{{site.registration.enabled}}"
             }
         },
         site
