--- a/app/sprinkles/account/templates/components/main-nav.html.twig
+++ b/app/sprinkles/account/templates/components/main-nav.html.twig
@@ -11,13 +11,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{site.uri.public}}">UserFrosting</a>
+            <a class="navbar-brand" href="{{site.uri.public}}">{{site.title}}</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="{{site.uri.public}}/about">About</a>
+                    <a href="{{site.uri.public}}/about">{{translate("ABOUT")}}</a>
                 </li>
                 {% if current_user.isGuest() %}
                     <li>
