separate table for password set/reset tokens

--- a/app/sprinkles/account/templates/pages/reset-password.html.twig
+++ b/app/sprinkles/account/templates/pages/reset-password.html.twig
@@ -22,7 +22,7 @@
             <div id="alerts-page">
 
             </div>
-            <form id="set-or-reset-password" role="form" action="{{site.uri.public}}/account/reset-password" method="post" class="r-form">
+            <form id="set-or-reset-password" role="form" action="{{site.uri.public}}/account/set-password" method="post" class="r-form">
                 {% include "components/csrf.html.twig" %}
                 {# Prevent browsers from trying to autofill the password field.  See http://stackoverflow.com/a/23234498/2970321 #}
                 <input type="text" style="display:none">
@@ -37,7 +37,7 @@
                     <label class="sr-only" for="form-passwordc">Re-enter new password</label>
                     <input type="password" name="passwordc" placeholder="Re-enter your new password" class="form-control" id="form-passwordc">
                 </div>
-                <input type="hidden" name="secret_token" value="{{page.secret_token}}">
+                <input type="hidden" name="token" value="{{token}}">
                 <button type="submit" class="btn">Set New Password and Sign In</button>
             </form>
         </div>
