--- a/app/sprinkles/account/templates/pages/set-password.html.twig
+++ b/app/sprinkles/account/templates/pages/set-password.html.twig
@@ -36,7 +36,7 @@
                     <label class="sr-only" for="form-passwordc">Re-enter Password</label>
                     <input type="password" name="passwordc" placeholder="Re-enter your password" class="form-control" id="form-passwordc">
                 </div>
-                <input type="hidden" name="secret_token" value="{{page.secret_token}}">
+                <input type="hidden" name="token" value="{{token}}">
                 <button type="submit" class="btn">Set Password and Sign In</button>
             </form>
         </div>
