--- a/app/sprinkles/account/templates/mail/resend-verification.html.twig
+++ b/app/sprinkles/account/templates/mail/resend-verification.html.twig
@@ -8,7 +8,7 @@
 <p>
 We have received a new verification request for your account with {{site.title}} ({{site.uri.public}}).  Please follow the link below to verify your account.  If your account is already active, please disregard this message.
 </p>
-<a href="{{site.uri.public}}/account/verify?secret_token={{user.secret_token}}">{{site.uri.public}}/account/verify?secret_token={{user.secret_token}}</a>
+<a href="{{site.uri.public}}/account/verify?token={{token}}">{{site.uri.public}}/account/verify?token={{token}}</a>
 </p>
 <p>
 With regards,<br>
