--- a/app/sprinkles/account/templates/mail/verify-account.html.twig
+++ b/app/sprinkles/account/templates/mail/verify-account.html.twig
@@ -12,7 +12,7 @@ You are receiving this email because you registered with {{site.title}} ({{site.
 You will need to verify your account before you can login. Please follow the link below to verify your account.
 </p>
 <p>
-<a href="{{site.uri.public}}/account/verify?secret_token={{user.secret_token}}">{{site.uri.public}}/account/verify?secret_token={{user.secret_token}}</a>
+<a href="{{site.uri.public}}/account/verify?token={{token}}">{{site.uri.public}}/account/verify?token={{token}}</a>
 </p>
 <p>
 With regards,<br>
