start working on themes

--- a/app/sprinkles/root/assets/css/sb-admin-2-red.css
+++ b/app/sprinkles/root/assets/css/sb-admin-2-red.css
@@ -182,6 +182,8 @@ body {
     margin-left: auto;
   }
 }
+
+/*
 .btn-outline {
   color: inherit;
   background-color: transparent;
@@ -349,3 +351,4 @@ table.dataTable thead .sorting:after {
 .panel-yellow a:hover {
   color: #df8a13;
 }
+*/
