--- a/app/sprinkles/root/assets/css/sb-admin-2-red.css
+++ b/app/sprinkles/root/assets/css/sb-admin-2-red.css
@@ -1,119 +1,89 @@
-/* CSS crunched with Crunch - http://crunchapp.net/ */
+/*!
+ * Custom red theme for Start Bootstrap - SB Admin 2 Bootstrap Admin Theme (http://startbootstrap.com)
+ * 
+ * CSS crunched with Crunch - http://crunchapp.net/
+ */
+
 body {
-  background-color: #ffffff;
+  background-color: #fff;
 }
-#wrapper {
-  width: 100%;
-}
-#page-wrapper {
-  padding: 105px 15px;
-  min-height: 568px;
-  background-color: white;
-}
-@media (min-width: 768px) {
-  #page-wrapper {
-    position: inherit;
-    margin: 0 0 0 250px;
-    padding: 60px 30px 30px 30px;
-    border-left: 1px solid #eeeeee;
-  }
-}
+
 .navbar-userfrosting {
-  color: #FFFFFF;
+  color: #fff;
   background-color: #d9534f;
 }
+
 .navbar-userfrosting .navbar-header .navbar-brand {
-  color: #ffffff;
+  color: #fff;
 }
+
 .navbar-userfrosting .navbar-header .navbar-brand:hover,
 .navbar-userfrosting .navbar-header .navbar-brand:focus {
   color: #ebebeb;
 }
+
+/**
+ * .navbar-alert
+ *
+ * Styles for the message that appears in the top of the navbar next to the brand.
+ */
 .navbar-userfrosting .navbar-text.navbar-alert {
   display: none;
 }
+
 @media (min-width: 820px) {
   .navbar-userfrosting .navbar-text.navbar-alert {
     display: inline;
     font-weight: 800;
     font-size: 14px;
     margin-left: 100px;
-    color: #ffffff;
+    color: #fff;
   }
 }
+
 .navbar-userfrosting .navbar-toggle {
   border-color: #333333;
 }
+
 .navbar-userfrosting .navbar-toggle:hover,
 .navbar-userfrosting .navbar-toggle:focus {
   background-color: #c0534f;
 }
+
 .navbar-userfrosting .navbar-toggle .icon-bar {
-  background-color: #ffffff;
+  background-color: #fff;
 }
-.navbar-userfrosting .navbar-top-links {
-  margin-right: 0;
-}
-.navbar-userfrosting .navbar-top-links li {
-  display: inline-block;
-}
-.navbar-userfrosting .navbar-top-links li:last-child {
-  margin-right: 15px;
-}
-.navbar-userfrosting .navbar-top-links li a {
-  padding: 15px;
-  min-height: 50px;
-}
+
 .navbar-userfrosting .navbar-top-links > li > a {
-  color: #FFFFFF;
+  color: #fff;
 }
+
 .navbar-userfrosting .navbar-top-links > li > a.active,
 .navbar-userfrosting .navbar-top-links > li > a:hover,
 .navbar-userfrosting .navbar-top-links > li > a:focus {
   background-color: #c0534f;
 }
+
 .navbar-userfrosting .nav > li.open > a {
   background-color: #c0534f;
 }
+
 .navbar-userfrosting .nav > li.open > a.active,
 .navbar-userfrosting .nav > li.open > a:hover,
 .navbar-userfrosting .nav > li.open > a:focus {
   background-color: #c0534f;
 }
+
 .navbar-userfrosting .navbar-top-links .dropdown-menu li {
-  color: #000000;
-  display: block;
+  color: #000;
 }
-.navbar-userfrosting .navbar-top-links .dropdown-menu li:last-child {
-  margin-right: 0;
-}
-.navbar-userfrosting .navbar-top-links .dropdown-menu li a {
-  padding: 3px 20px;
-  min-height: 0;
-}
-.navbar-userfrosting .navbar-top-links .dropdown-menu li a div {
-  white-space: normal;
-}
+
 .navbar-userfrosting .navbar-top-links .dropdown-messages,
 .navbar-userfrosting .navbar-top-links .dropdown-tasks,
 .navbar-userfrosting .navbar-top-links .dropdown-alerts {
-  color: #000000;
-  width: 310px;
-  min-width: 0;
+  color: #000;
 }
-.navbar-userfrosting .navbar-top-links .dropdown-messages {
-  margin-left: 5px;
-}
-.navbar-userfrosting .navbar-top-links .dropdown-tasks {
-  margin-left: -59px;
-}
-.navbar-userfrosting .navbar-top-links .dropdown-alerts {
-  margin-left: -123px;
-}
-.navbar-userfrosting .navbar-top-links .dropdown-user {
-  right: 0;
-  left: auto;
-}
+
 @media (min-width: 768px) {
   .navbar-userfrosting .sidebar-wrapper {
     width: 250px;
@@ -126,229 +96,33 @@ body {
     overflow-y: auto;
   }
 }
-.navbar-userfrosting .sidebar .sidebar-nav.navbar-collapse {
-  padding-left: 0;
-  padding-right: 0;
-}
-.navbar-userfrosting .sidebar .sidebar-search {
-  padding: 15px;
-}
+
 .navbar-userfrosting .sidebar ul {
   background-color: #d9534f;
 }
+
 .navbar-userfrosting .sidebar ul li {
   border-bottom: 1px solid #e76c74;
 }
+
 .navbar-userfrosting .sidebar ul li a {
-  color: #ffffff;
+  color: #fff;
 }
+
 .navbar-userfrosting .sidebar ul li a.active {
   background-color: #c0534f;
 }
+
 .navbar-userfrosting .sidebar ul li a:hover {
   background-color: #c0534f;
 }
+
 .navbar-userfrosting .sidebar ul li a:focus {
   background-color: #c0534f;
 }
-.navbar-userfrosting .sidebar .arrow {
-  float: right;
-}
-.navbar-userfrosting .sidebar .fa.arrow:before {
-  content: "\f104";
-}
-.navbar-userfrosting .sidebar .active > a > .fa.arrow:before {
-  content: "\f107";
-}
-.navbar-userfrosting .sidebar .nav-second-level li,
-.navbar-userfrosting .sidebar .nav-third-level li {
-  border-bottom: none !important;
-}
-.navbar-userfrosting .sidebar .nav-second-level li a {
-  padding-left: 37px;
-}
-.navbar-userfrosting .sidebar .nav-third-level li a {
-  padding-left: 52px;
-}
+
 @media (min-width: 768px) {
   .navbar-userfrosting .sidebar {
-    z-index: 1;
-    position: absolute;
-    width: 250px;
-  }
-  .navbar-userfrosting .navbar-top-links .dropdown-messages,
-  .navbar-userfrosting .navbar-top-links .dropdown-tasks,
-  .navbar-userfrosting .navbar-top-links .dropdown-alerts {
-    margin-left: auto;
+    margin-top: 0px;
   }
 }
-
-/*
-.btn-outline {
-  color: inherit;
-  background-color: transparent;
-  transition: all .5s;
-}
-.btn-primary.btn-outline {
-  color: #428bca;
-}
-.btn-success.btn-outline {
-  color: #5cb85c;
-}
-.btn-info.btn-outline {
-  color: #5bc0de;
-}
-.btn-warning.btn-outline {
-  color: #f0ad4e;
-}
-.btn-danger.btn-outline {
-  color: #d9534f;
-}
-.btn-primary.btn-outline:hover,
-.btn-success.btn-outline:hover,
-.btn-info.btn-outline:hover,
-.btn-warning.btn-outline:hover,
-.btn-danger.btn-outline:hover {
-  color: white;
-}
-.chat {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-.chat li {
-  margin-bottom: 10px;
-  padding-bottom: 5px;
-  border-bottom: 1px dotted #ffffff;
-}
-.chat li.left .chat-body {
-  margin-left: 60px;
-}
-.chat li.right .chat-body {
-  margin-right: 60px;
-}
-.chat li .chat-body p {
-  margin: 0;
-}
-.panel .slidedown .glyphicon,
-.chat .glyphicon {
-  margin-right: 5px;
-}
-.chat-panel .panel-body {
-  height: 350px;
-  overflow-y: scroll;
-}
-.login-panel {
-  margin-top: 25%;
-}
-.flot-chart {
-  display: block;
-  height: 400px;
-}
-.flot-chart-content {
-  width: 100%;
-  height: 100%;
-}
-table.dataTable thead .sorting,
-table.dataTable thead .sorting_asc,
-table.dataTable thead .sorting_desc,
-table.dataTable thead .sorting_asc_disabled,
-table.dataTable thead .sorting_desc_disabled {
-  background: transparent;
-}
-table.dataTable thead .sorting_asc:after {
-  content: "\f0de";
-  float: right;
-  font-family: fontawesome;
-}
-table.dataTable thead .sorting_desc:after {
-  content: "\f0dd";
-  float: right;
-  font-family: fontawesome;
-}
-table.dataTable thead .sorting:after {
-  content: "\f0dc";
-  float: right;
-  font-family: fontawesome;
-  color: rgba(50, 50, 50, 0.5);
-}
-.btn-circle {
-  width: 30px;
-  height: 30px;
-  padding: 6px 0;
-  border-radius: 15px;
-  text-align: center;
-  font-size: 12px;
-  line-height: 1.428571429;
-}
-.btn-circle.btn-lg {
-  width: 50px;
-  height: 50px;
-  padding: 10px 16px;
-  border-radius: 25px;
-  font-size: 18px;
-  line-height: 1.33;
-}
-.btn-circle.btn-xl {
-  width: 70px;
-  height: 70px;
-  padding: 10px 16px;
-  border-radius: 35px;
-  font-size: 24px;
-  line-height: 1.33;
-}
-.show-grid [class^="col-"] {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border: 1px solid #ddd;
-  background-color: #eee !important;
-}
-.show-grid {
-  margin: 15px 0;
-}
-.huge {
-  font-size: 40px;
-}
-.panel-green {
-  border-color: #5cb85c;
-}
-.panel-green .panel-heading {
-  border-color: #5cb85c;
-  color: white;
-  background-color: #5cb85c;
-}
-.panel-green a {
-  color: #5cb85c;
-}
-.panel-green a:hover {
-  color: #3d8b3d;
-}
-.panel-red {
-  border-color: #d9534f;
-}
-.panel-red .panel-heading {
-  border-color: #d9534f;
-  color: white;
-  background-color: #d9534f;
-}
-.panel-red a {
-  color: #d9534f;
-}
-.panel-red a:hover {
-  color: #b52b27;
-}
-.panel-yellow {
-  border-color: #f0ad4e;
-}
-.panel-yellow .panel-heading {
-  border-color: #f0ad4e;
-  color: white;
-  background-color: #f0ad4e;
-}
-.panel-yellow a {
-  color: #f0ad4e;
-}
-.panel-yellow a:hover {
-  color: #df8a13;
-}
-*/
