start working on modals, reorganize a few things

--- a/app/sprinkles/account/templates/pages/reset-password.html.twig
+++ b/app/sprinkles/account/templates/pages/reset-password.html.twig
@@ -47,7 +47,7 @@
 {% block scripts_page %}
     <!-- Include validation rules -->
     <script>
-    {% include "components/validators.js.twig" %}
+    {% include "components/page.js.twig" %}
     </script>
     
     <!-- Include page-specific JS bundle -->
