--- a/app/sprinkles/account/templates/pages/account-settings.html.twig
+++ b/app/sprinkles/account/templates/pages/account-settings.html.twig
@@ -91,7 +91,7 @@
 {% block scripts_page %}
     <!-- Include validation rules -->
     <script>
-    {% include "components/validators.js.twig" %}
+    {% include "components/page.js.twig" %}
     </script>
 
     <!-- Include form widgets JS -->
