--- a/app/sprinkles/account/templates/pages/forgot-password.html.twig
+++ b/app/sprinkles/account/templates/pages/forgot-password.html.twig
@@ -37,7 +37,7 @@
 {% block scripts_page %}
     <!-- Include validation rules -->
     <script>
-    {% include "components/validators.js.twig" %}
+    {% include "components/page.js.twig" %}
     </script>
     
     <!-- Include page-specific JS bundle -->
