--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,9 +4,10 @@
   {% include 030/head.html %}
 
     <body id="page-top" class="index">
-    
         {% include 030/nav.html %}
-    
+        <div class="tease">
+            UserFrosting 4 is coming! Learn more at <a href="https://learn.userfrosting.com">https://learn.userfrosting.com</a>
+        </div>
         {{ content }}
           
         <!-- Footer -->
