--- a/app/sprinkles/root/templates/layouts/sb-admin-2.html.twig
+++ b/app/sprinkles/root/templates/layouts/sb-admin-2.html.twig
@@ -6,7 +6,7 @@
     <!-- Page-group-specific CSS asset bundle -->
     {{ assets.css('css/sb-admin-2') | raw }}
     <!-- Theme-specific CSS asset bundle -->
-    {{ assets.css('css/sb-admin-2-root') | raw }}
+    {{ theme_assets.css('css/sb-admin-2-root') | raw }}
 {% endblock %}
 
 {% block content %}
