--- a/app/sprinkles/root/templates/layouts/dashboard.html.twig
+++ b/app/sprinkles/root/templates/layouts/dashboard.html.twig
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div id="wrapper">
-        {% include 'components/nav-account.html.twig' %}
+        {% include 'components/dashboard/nav.html.twig' %}
         <div id="page-wrapper">
             {% block body_matter %}{% endblock %}
         </div>
