--- a/app/sprinkles/account/templates/components/default/main-nav.html.twig
+++ b/app/sprinkles/account/templates/components/default/main-nav.html.twig
@@ -24,8 +24,14 @@
                         <a href="{{site.uri.public}}/account/sign-in-or-register" class="nav-highlight">{{translate("SIGNIN")}}</a>
                     </li>
                 {% else %}
-                    <li>
-                        <a href="{{site.uri.public}}/account/settings" class="nav-highlight">{{translate("ACCOUNT.MY")}}</a>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle nav-highlight" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{current_user.user_name}} <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="{{site.uri.public}}/account/settings"><i class="fa fa-gear fa-fw"></i> {{translate("ACCOUNT.MY")}}</a></li>
+                        <li><a href="{{site.uri.public}}/admin" class=""><i class="fa fa-lock fa-fw"></i> {{translate("ADMIN.PANEL")}}</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="{{site.uri.public}}/account/logout"><i class="fa fa-sign-out fa-fw"></i> {{translate("LOGOUT")}}</a>
+                      </ul>
                     </li>
                 {% endif %}
             </ul>
